# ocaml-msgpck

./: .gitignore  .merlin  CHANGES.md  Makefile  README.md  _tags  build  dune-project  msgpck-repr.opam  msgpck.opam  opam
.github/workflows/: gh-pages.yml  main.yml
doc/: dev.odocl  index.html
doc/msgpck/: index.html
doc/msgpck-repr/: index.html
doc/msgpck-repr/Msgpck_repr/: index.html
doc/msgpck/Msgpck/: index.html
doc/msgpck/Msgpck/Bytes/: index.html
doc/msgpck/Msgpck/BytesBuf/: index.html
doc/msgpck/Msgpck/String/: index.html
doc/msgpck/Msgpck/StringBuf/: index.html
doc/msgpck/Msgpck/module-type-S/: index.html
pkg/: META  pkg.ml
src/: dune  jbuild  msgpck.ml  msgpck.mli  msgpck.mllib  msgpck_repr.ml  msgpck_repr.mli  msgpck_util.ml
test/: dune  jbuild  test.ml
