opam-version: "1.2"
name: "msgpck-repr"
version: "1.3"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-msgpck"
license: "ISC"
dev-repo: "git+https://github.com/vbmithr/ocaml-msgpck.git"
bug-reports: "https://github.com/vbmithr/ocaml-msgpck/issues"
tags: []
available: [ ocaml-version >= "4.02.0" ]
depends: [
  "jbuilder" {build & >= "1.0+beta19.1"}
  "msgpck" {= "1.3"}
  "ocplib-json-typed" {>= "0.6"}
]
build:[ "jbuilder" "build" "-j" jobs "@install" ]
