opam-version: "1.2"
name: "msgpck"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: [
  "Vincent Bernardoff <vb@luminar.eu.org>"
  "Stavros Polymenis"
]
homepage: "https://github.com/vbmithr/ocaml-msgpck"
license: "ISC"
dev-repo: "https://github.com/vbmithr/ocaml-msgpck.git"
bug-reports: "https://github.com/vbmithr/ocaml-msgpck/issues"
tags: []
available: [ ocaml-version >= "4.02.0" ]
depends: [
  "jbuilder" {build & >= "1.0+beta8"}
  "ocplib-endian" {>= "1.0"}
]
build:[ "jbuilder" "build" "-j" jobs "@install" ]
