opam-version: "2.0"
name: "msgpck"
version: "1.3"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: "Vincent Bernardoff <vb@luminar.eu.org>"
homepage: "https://github.com/vbmithr/ocaml-msgpck"
synopsis: "Pure OCaml implementation of msgpack serialization and deserialization"
license: "ISC"
dev-repo: "git+https://github.com/vbmithr/ocaml-msgpck.git"
bug-reports: "https://github.com/vbmithr/ocaml-msgpck/issues"
tags: ["messagepack" "msgpack" "binary" "serialization"]
depends: [
  "dune" {build & >= "1.0"}
  "ocplib-endian" {>= "1.0"}
  "ocaml" { >= "4.02.0" }
]
build:[ "dune" "build" "-p" name "-j" jobs ]
